--- a/landing_page/landing_page.html
+++ b/landing_page/landing_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../index.css" />
     <title>Anchor Chart</title>
   </head>
   <body>
@@ -31,71 +31,123 @@
         </form>
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
-          <li class="nav-item">
-            <a href="../cart_page/cart.html" class="nav-link d-flex flex-column">
-              <i class="bi bi-cart-fill nav-icon">
-                <span class="d-none d-sm-inline nav-text">
-                  Your Shopping Cart:
-                </span>
-              </i>
-            </a>
-          </li>
+            <li class="nav-item">
+              <a
+                href="../cart_page/cart.html"
+                class="nav-link d-flex flex-column"
+              >
+                <i class="bi bi-cart-fill nav-icon">
+                  <span class="d-none d-sm-inline nav-text">
+                    Your Shopping Cart:
+                  </span>
+                </i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div class="container">
-        <h2 class="company-title">Anchor Chart</h2>
-        <ul class="navbar-nav justify-content-around align-items-center flex-row mt-5 border-bottom d-flex p-5 container-fluid flex-wrap">
-            <li class="nav-item">
-                <a href="./landing_page.html" class="nav-link"><h4>Home</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../shopping_page/shopping_page.html" class="nav-link"><h4>Shop</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../account_page/account_page.html" class="nav-link"><h4>My Account</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../cart_page/cart.html" class="nav-link"><h4>Cart</h4></a>
-            </li>
-        </ul>
-        <h1 class="section-title border-bottom d-flex p-5">Home</h1>
-        </div>
-        <!-- User Login / Registration Forms -->
-<div class="container" id="form-container">
-     <!-- Login Form -->
-     
-<div class="container" id="login-form">
-  <h3>Login</h3>
-<form class="border m-3">
-  <div class="mb-3 mx-3">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputUserEmail">
+      <h2 class="company-title">Anchor Chart</h2>
+      <ul
+        class="
+          navbar-nav
+          justify-content-around
+          align-items-center
+          flex-row
+          mt-5
+          border-bottom
+          d-flex
+          p-5
+          container-fluid
+          flex-wrap
+        "
+      >
+        <li class="nav-item">
+          <a href="./landing_page.html" class="nav-link"><h4>Home</h4></a>
+        </li>
+        <li class="nav-item">
+          <a href="../shopping_page/shopping_page.html" class="nav-link"
+            ><h4>Shop</h4></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="../account_page/account_page.html" class="nav-link"
+            ><h4>My Account</h4></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="../cart_page/cart.html" class="nav-link"><h4>Cart</h4></a>
+        </li>
+      </ul>
+      <h1 class="section-title border-bottom d-flex p-5">Home</h1>
     </div>
-  </div>
-  <div class="mb-3 mx-3">
-    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputUserPassword">
-    </div>
-  </div>
-    <button type="submit" class="btn btn-primary m-3">Sign in</button>
-    </form>
-</div>
+    <!-- User Login / Registration Forms -->
+    <div class="container" id="form-container">
+      <!-- Login Form -->
 
-    <!-- Registration Form -->
-<div class="container" id="registration-form">
-  <h3>Registration</h3>
-<form class="row g-3 mx-3 border m-3">
-  <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">Email</label>
-    <input type="email" class="form-control" id="inputEmail4" required>
-  </div>
-  <div class="col-md-6">
-    <label for="inputPassword4" class="form-label">Password</label>
-    <input type="password" class="form-control" id="inputPassword4" required>
-  </div>
-  <div class="col-12">
+      <div class="container" id="login-form">
+        <h3>Login</h3>
+        <form class="border m-3">
+          <div class="mb-3 mx-3">
+            <label for="inputEmail3" class="col-sm-2 col-form-label"
+              >Username</label
+            >
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputUserEmail" />
+            </div>
+          </div>
+          <div class="mb-3 mx-3">
+            <label for="inputPassword3" class="col-sm-2 col-form-label"
+              >Password</label
+            >
+            <div class="col-sm-10">
+              <input
+                type="password"
+                class="form-control"
+                id="inputUserPassword"
+              />
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary m-3">Sign in</button>
+          </div>
+        </form>
+      </div>
+
+      <!-- Registration Form -->
+      <div class="container" id="registration-form">
+        <h3>Registration</h3>
+        <form class="row g-3 mx-3 border m-3">
+          <div class="col-12">
+            <label for="inputEmail4" class="form-label">Username</label>
+            <input
+              type="email"
+              class="form-control"
+              id="inputEmail4"
+              required
+            />
+          </div>
+          <div class="col-12">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="inputEmail4"
+              required
+            />
+          </div>
+          <div class="col-12">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="inputPassword4"
+              required
+            />
+          </div>
+          <!-- SAVE CONTENT FOR LATER USE -->
+          <!-- <div class="col-12">
     <label for="inputAddress" class="form-label">Address</label>
     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
   </div>
@@ -117,13 +169,15 @@
   <div class="col-md-2">
     <label for="inputZip" class="form-label">Zip</label>
     <input type="text" class="form-control" id="inputZip" required>
-  </div>
+  </div> -->
 
-  <div class="col-12">
-    <button type="submit" class="btn btn-primary m-3">Create Account</button>
-  </div>
-</form>        
-    </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary m-3">
+              Create Account
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
