--- a/shopping_page/shopping_page.html
+++ b/shopping_page/shopping_page.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <form class="d-flex">
+        <!-- <form class="d-flex">
           <input
             class="form-control me-2"
             type="search"
@@ -28,7 +28,7 @@
             aria-label="Search"
           />
           <button class="btn btn-outline-primary" type="submit">Search</button>
-        </form>
+        </form> -->
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
           <li class="nav-item">
@@ -66,5 +66,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./shop.js"></script>
   </body>
 </html>
