added some es6 render syntax in shopping page and some alerts for failed/successful login/registration

--- a/landing_page/landing_page.html
+++ b/landing_page/landing_page.html
@@ -66,11 +66,11 @@
         <li class="nav-item">
           <a href="./landing_page.html" class="nav-link"><h4>Home</h4></a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="../shopping_page/shopping_page.html" class="nav-link"
             ><h4>Shop</h4></a
           >
-        </li>
+        </li> -->
         <li class="nav-item">
           <a href="../account_page/account_page.html" class="nav-link"
             ><h4>My Account</h4></a
@@ -81,6 +81,12 @@
         </li>
       </ul>
       <h1 class="section-title border-bottom d-flex p-5">Home</h1>
+    </div>
+    <div class="alert-success text-center p-2 hidden" id="registration-success">
+      Registration Successful!
+    </div>
+    <div class="alert-danger text-center p-2 hidden" id="login-failed">
+      Login Failed, Please Check Username and Password
     </div>
     <!-- User Login / Registration Forms -->
     <div class="container" id="form-container">
