--- a/shopping_page/shopping_page.html
+++ b/shopping_page/shopping_page.html
@@ -60,7 +60,26 @@
         </ul>
         <h1 class="section-title border-bottom d-flex p-5">Shop</h1>
         </div>
+        <div class="container d-flex justify-content-center flex-column">
+                    <a href="#" class="btn btn-success hidden col-2 admin-login">Add anchorChart</a>
+            <div class="card" style="width: 20rem;">
+        ${anchorCharts.map(anchorChart => `
+            <img src="${data.image}" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">${data.topic}</h5>
+              <p class="card-text">${data.subject}</p>
+              <p class="card-text">${data.grade}</p>
+              <p class="card-text">$${data.price}</p>
+              <span>
+                <a href="#" class="btn btn-primary">add to cart</a>
+                <a href="#" class="btn btn-warning hidden admin-login">update</a>
+                <a href="#" class="btn btn-danger hidden admin-login">delete</a>
+              </span>
+            </div>
+        `).join('')}
+        </div>
 
+        </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
