--- a/shopping_page/shopping_page.html
+++ b/shopping_page/shopping_page.html
@@ -86,6 +86,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./shop.js"></script>
-    <script src="../index.js"></script>
+    <!-- <script src="../index.js"></script> -->
   </body>
 </html>
